<resources>
    <string name="app_name">SHAFAZ WEB</string>
    <string name="webiview_url">https://www.cnet.com/news/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>


    <string name="action_settings">Settings</string>
    <string name="image_content">image</string>

    <string name="please_wait">Please Wait..</string>
    <string name="privacy_policy">Privacy Policy</string>


    <!--<about us strings>-->
    <string name="about_us_developer">Developer</string>
    <string name="about_us_developer_name">Shafaz Limited</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">fsfoysal15@gmail.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">"+88 017066845553</string>
    <string name="about_us_about">About Us</string>
    <string name="about">About</string>
    <string name="about_description">All-In-One web-view app, we’ve tried to cover all necessary intents and links so that buyer can use this for their custom reference and build something more exciting than our app.User friendly UI and simple codes makes it easier for the developers to re-create from this code.</string>
    <string name="sure_quit">Are you sure you want to quit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <!--<about us strings>-->

    <string name="yes">Yes</string>
    <string name="download_file">File Name :</string>
    <string name="download_title">Do you want to download?</string>
</resources>
