<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="@drawable/side_nav_bar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/app_image"
        android:layout_marginTop="35dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:padding="5dp"
        android:scaleType="fitXY"
        android:background="@drawable/white_bg"
        android:src="@drawable/about_icon"
        android:contentDescription="@string/image_content" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_image"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/app_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/about_us_email_text"
        android:fontFamily="@font/montserrat_light"
        android:textColor="@android:color/white"
        android:textSize="10dp" />

</RelativeLayout>
